<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3" >
  <name>stella_ui</name>
  <version>1.11.0</version>
  <description>The runtime_manager package</description>
  <maintainer email="kondoh@axe-inc.co.jp">Masao KONDOH</maintainer>
  <license>Apache 2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velodyne</exec_depend>
  <exec_depend>uvc_camera</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <export>
  </export>
</package>
